# compressor

./: .gitignore  CMakeLists.txt  build.sh  generate.sh  readme.md
argparser/: CMakeLists.txt  readme.md
argparser/include/argparser/: arg.h  argparser.h  basearg.h  valueparser.h
argparser/src/argparser/: arg.cpp  argparser.cpp  basearg.cpp  valueparser.cpp
argparser/test/: CMakeLists.txt
argparser/test/include/argparser/test/mock/: argparser.h
argparser/test/src/: arg.cpp  argparser.cpp  valueparser.cpp
cmake/: PackageTest.cmake
compressor/: CMakeLists.txt
compressor/include/: BitVector.hpp
compressor/include/bitvector/: BitVector.hpp  BitVectorIterator.hpp  bitvector.h  bitvectoriterator.h
compressor/include/compressor/: compressor.h  decompressor.h  engine.h
compressor/include/compressor/bitset/: bitset.h  bitset_iterator.h
compressor/include/compressor/data/: data.h  reader.h  writer.h
compressor/include/compressor/engine/: engine.h
compressor/include/compressor/task/: coder.h  decoder.h  encoder.h
compressor/include/compressor/tree/: symbolnode.h
compressor/include/compressor/tree/binary/: node.h  nodeiterator.h  tree.h
compressor/include/compressor/utils/: utils.h
compressor/include/tree/: symbolnode.h
compressor/include/tree/binary/: node.h  nodeiterator.h  tree.h
compressor/src/: BitVector.cpp  compressor.cpp
compressor/src/bitvector/: BitVector.cpp  BitVectorIterator.cpp
compressor/src/compressor/: compressor.cpp  decompressor.cpp  engine.cpp
compressor/src/compressor/bitset/: bitset.cpp  bitset_iterator.cpp
compressor/src/compressor/data/: data.cpp
compressor/src/compressor/engine/: engine.cpp
compressor/src/compressor/task/: decoder.cpp  encoder.cpp
compressor/src/compressor/tree/: symbolnode.cpp
compressor/src/compressor/tree/binary/: node.cpp  nodeiterator.cpp  tree.cpp
compressor/src/compressor/utils/: utils.cpp
compressor/src/tree/: symbolnode.cpp
compressor/src/tree/binary/: node.cpp  nodeiterator.cpp  tree.cpp
compressor/test/: CMakeLists.txt
compressor/test/include/compressor/test/mock/: compressor.h
compressor/test/include/compressor/test/mock/data/: reader.h  writer.h
compressor/test/include/compressor/test/mock/engine/: engine.h
compressor/test/include/compressor/test/mock/task/: decoder.h  encoder.h
compressor/test/src/bitset/: bitset.cpp
compressor/test/src/compressor/: compressor.cpp
compressor/test/src/data/: data.cpp
compressor/test/src/engine/: engine.cpp
compressor/test/src/tree/binary/: node.cpp  nodeiterator.cpp
compressor_app/: CMakeLists.txt
compressor_app/include/: cli.h
compressor_app/src/: cli.cpp  main.cpp
compressor_benchmark/: CMakeLists.txt
compressor_benchmark/src/bitset/: Access.cpp  Creation.cpp
compressor_benchmark/src/bitvector/: Access.cpp  BitVectorBenchmark.cpp  Creation.cpp
compressor_cli/: CMakeLists.txt
compressor_cli/include/compressor/: cli.h
compressor_cli/src/compressor/: cli.cpp
compressor_cli/test/: CMakeLists.txt
compressor_cli/test/src/: cli.cpp
compressor_example/: CMakeLists.txt
compressor_example/samples/raw/: lorem_5p.txt
compressor_example/src/: main.cpp
compressor_test/: CMakeLists.txt
compressor_test/src/bitset/: bitset.cpp  bitset_iterator.cpp
compressor_test/src/bitvector/: BitVectorIteratorTests.cpp  BitVectorTests.cpp  bitvector.cpp  bitvectoriterator.cpp
compressor_test/src/compressor/: compressor.cpp  engine.cpp  test.cpp
compressor_test/src/data/: data.cpp
compressor_test/src/tree/binary/: node.cpp  nodeiterator.cpp
compressor_test/src/utils/: utils.cpp
dependencies/boostorg/boost/: CMakeLists.txt
dependencies/google/benchmark/: CMakeLists.txt.in
dependencies/google/googletest/: CMakeLists.txt.in
docs/: compression.md  development.md  file_format.md
example/: CMakeLists.txt
example/samples/raw/: lorem_10p.txt  lorem_20p.txt  lorem_50p.txt
example/src/: main.cpp
lib/instrumentor/: CMakeLists.txt
lib/instrumentor/example/: CMakeLists.txt
lib/instrumentor/example/src/: main.cpp
lib/instrumentor/include/instrumentor/: instrumentationtimer.h  instrumentor.h  profileresult.h
lib/instrumentor/src/instrumentor/: instrumentationtimer.cpp  instrumentor.cpp
tests/: CMakeLists.txt
